<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/ru.inventos.yum"
    android:layout_width="@dimen/portion_width"
    android:layout_height="@dimen/portion_height"
    android:background="@color/main_background"
    tools:context=".Portion" >

    <LinearLayout
        android:id="@+id/portion_llayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/portion_divider1"
        android:layout_marginBottom="@dimen/portion_llayout_marginBottom"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/portion_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/portion_textSize"
            android:text="@string/selected" />

        <org.holoeverywhere.widget.NumberPicker
            android:id="@+id/portion_numberPicker"
            android:layout_margin="@dimen/portion_picker_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/portion_portions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/portion_textSize"
            android:text="@string/portions" />
    </LinearLayout>

    <ru.inventos.yum.Divider
        android:id="@+id/portion_divider1"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/portion_btn"
        custom:fill_color="@color/main_menu_dividers" />

    <Button
        android:id="@+id/portion_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/portion_btn_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_background"
        android:textSize="@dimen/portion_textSize"
        android:onClick="onBtnClick"
        android:text="@string/portion_ready" />

</RelativeLayout>