<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report" 
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/report_actionbar" 
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/action_bar" 
        android:gravity="center_vertical">
        
        <ImageView
            android:id="@+id/report_image"
            android:layout_width="@dimen/actionbar_menu_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/actionbar_menu_btn_margin_lr"
            android:layout_marginRight="@dimen/actionbar_menu_btn_margin_lr"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:onClick="onMenuBtnClick"
            android:clickable="true"
            android:src="@drawable/actionbar_menu_btn" />        
        
        <TextView 
	    	android:id="@+id/report_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/actionbar_title_textSize"
	    	android:textColor="@color/actionbar_title_close"
	    	android:text="@string/report_title_normal"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/report_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_actionbar"
        android:layout_marginTop="@dimen/report_margin_tb"
        android:layout_marginBottom="@dimen/report_margin_tb"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/report_text1_textSize"
        android:text="@string/report_text1_normal"/>
    
    <TextView
        android:id="@+id/report_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_text1"
        android:layout_marginBottom="@dimen/report_margin_tb"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/report_text1_textSize"
        android:text="@string/report_text2_normal"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@id/report_text2">
        
        <TextView 
            android:id="@+id/report_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/report_text3_textSize"
            android:layout_marginRight="@dimen/order_text3_marginRight"
            android:layout_gravity="center"
            android:text="@string/report_text3_normal"/>
        
        <ImageButton 
    		android:id="@+id/report_btn"
        	android:layout_width="@dimen/report_btn_width"
        	android:layout_height="wrap_content"   
        	android:layout_alignParentLeft="true"     
        	android:layout_centerVertical="true"
        	android:scaleType="fitCenter"        
       		android:adjustViewBounds="true"
        	android:src="@drawable/report_btn"
        	android:background="#00000000" 
        	android:onClick="onBtnClick"/>
        
    </LinearLayout>

</RelativeLayout>